Logout added, untested as it gets from the auth header which swagger seems to not use
